--- a/addon.config.json
+++ b/addon.config.json
@@ -10,7 +10,8 @@
     "data_index_meta_data.ts",
     "data_index_ui_api.ts",
     "all_activities_pns.ts",
-    "transaction_lines_pns.ts"
+    "transaction_lines_pns.ts",
+    "monitor.ts"
   ],
   "Editors": [
     "main"
