Add alerts in case no data returns from papai search + small refactor

--- a/addon.config.json
+++ b/addon.config.json
@@ -45,7 +45,8 @@
       "papi": "9.5.526",
       "adal": "1.0.208",
       "pepperi_elastic_search": "1.1.24",
-      "pns": "1.0.62"
+      "pns": "1.0.62",
+      "system_health": "1.0.132"
     }
   }
 }
